# rpgtext

./: .gitignore  README.md  ROADMAP.MD  TODO.md  charactersys.py  combat.py  enemys.py  main.py  pyproject.toml  requirements.txt  savegame.json  skills.json  skillsys.py
data/: enemy_phrases.json  enemy_skills.json  locations.json  maps.json  skills.json
docs/: ROADMAP.MD  TODO.md
features/: atribute_tree.py
src/: __init__.py  apis.py  app.py  camping.py  charactersys.py  combat.py  enemys.py  generate_items.py  generate_maps.py  generate_player.py  inventory.py  lvlsys.py  main.py  map.py  map_storage.py  menu.py  npcs.py  save_load.py  showstats.py  skillsys.py  styles.tcss
src/data/: maps.json
tests/: conftest.py  test_charactersys.py  test_combat.py  test_combat_trigger.py  test_enemys.py  test_final_system.py  test_full_gameplay.py  test_movement_system.py  test_skillsys.py
