[project]
name = "rpgtext"
version = "0.1.0"
description = "Text-based RPG game written in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32,<3.0",
    "rich>=14.2,<15.0",
]

[tool.uv]
# This project is an application, not a library
package = false

[build-system]
# Kept minimal for compatibility, but not actively used
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
